# pyTermGL

./: .flake8  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  TUTORIAL.md  conf.py  ctermgl.pxd  index.rst  pyproject.toml  requirements-dev.txt  requirements-dist.txt  setup.py  termgl.pyx
.github/workflows/: docs.yml  python-package.yml
demo/: __main__.py  demo.py  demo_color.py  demo_keyboard.py  demo_mandelbrot.py  demo_mouse.py  demo_rgb.py  demo_star.py  demo_teapot.py  demo_texture.py
docs/: objects.inv  search.html  searchindex.js
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  py-modindex.html  searchindex.js
termgl/: __init__.pyi  ctermgl.pxd  ctermglutil.pxd  termgl.pyx
tests/: test_gradient.py  test_idx.py  test_pix_fmt.py  test_pixel_shader_simple.py  test_pixel_shader_texture.py  test_rgb.py  test_termgl.py  test_tgl.py  test_transform.py  test_vertex_shader_simple.py
util/: build.sh  full.sh  quick.sh
